name:                twi-high
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/aiya000/hs-twi-high#readme
license:             BSD3
license-file:        LICENSE
author:              aiya000
maintainer:          aiya000.develop@gmail.com
copyright:           aiya000
category:            Simple
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      .
  exposed-modules:     Data.TwiHigh
                     , Data.TwiHigh.Followers
                     , Data.TwiHigh.Statuses
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , authenticate-oauth
                     , bytestring
                     , http-client
                     , http-client-tls
                     , text
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/aiya000/hs-twi-high
